Move construction of join/fork edges to own method